--- a/.github/workflows/main_lockton-dotnet.yml
+++ b/.github/workflows/main_lockton-dotnet.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     permissions:
       contents: read #This is required for actions/checkout
 
@@ -23,21 +23,32 @@ jobs:
         with:
           dotnet-version: '8.x'
 
+      - name: Restore dependencies
+        run: dotnet restore
+
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        #run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish -c Release -o ./publish    
+ 
+      - name: List published files
+        run: ls -R ./publish
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
-
+          #path: ${{env.DOTNET_ROOT}}/myapp
+          path: ./publish
+      
   deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
+    permissions:
+      actions: read # Required for downloading artifacts
+      contents: read
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
@@ -47,6 +58,10 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
+          path: ./downloaded
+      
+      - name: List downloaded files
+        run: ls -R ./downloaded
       
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -54,5 +69,5 @@ jobs:
         with:
           app-name: 'lockton-dotnet'
           slot-name: 'Production'
-          package: .
+          package: ./downloaded
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_CE00124B69C4413EA77A1191130A95E5 }}
